fail2ban (0.6.1-4) unstable; urgency=low

  * Adjusted debian packaging:
    - Clean up of debian/rules: removed commented out dh_ scripts which
      definetly will never be used
    - debhelper and dpatch moved to Build-Depends
    - added --no-compile for python setup.py install, and removed explicit
      cleaning of .pyc's

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 16 May 2006 15:53:06 -0400

fail2ban (0.6.1-3) unstable; urgency=low

  * Fixed vsftpd failregexp (closes: #366687)
  * Started to use dpatch

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 10 May 2006 11:45:57 -0400

fail2ban (0.6.1-2) unstable; urgency=low

  * Assigned maxreinits to 1000 to be reasonable since otherwise logfile grows
    indefinetly if there is a real problem on the system (closes: #359218)
  * Adjusted debian/{copyright,watch}
  * New version of init.d script (Thanks to Aaron Isotton) (closes: #364278)

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 27 Mar 2006 12:55:39 -0500

fail2ban (0.6.1-1) unstable; urgency=low

  * New upstream release
  * In config file added fwchain to ease switching to another input chain
    (closes: #357164)

 -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 18 Mar 2006 23:11:53 -0500

fail2ban (0.6.0-8) unstable; urgency=low

  * Minor adjustments to reduce the deviation from the upstream code

 -- Yaroslav Halchenko <debian@onerussian.com>  Sat, 11 Mar 2006 00:48:14 -0500

fail2ban (0.6.0-7) unstable; urgency=low

  * Fixed a typo in failregex for SSH section (closes: #356112)

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu,  9 Mar 2006 15:13:48 -0500

fail2ban (0.6.0-6) unstable; urgency=low

  * Updated README.Debian with information about some cases with
    not-as-shipped configurations of sshd on the boxes running older versions
    of openssh server
  * Included regexps for SSH in case iff authentication as root using keys was
    attempted whenever PermitRootLogin is set to something else than "yes" and