@@ -6,6 +6,8 @@ fail2ban (0.6.1-4) unstable; urgency=low
     - debhelper and dpatch moved to Build-Depends
     - added --no-compile for python setup.py install, and removed explicit
       cleaning of .pyc's
+    - fixed separation binary-indep and binary-arch in debian/rules
+    - restricted depends on python >= 2.3
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 16 May 2006 15:53:06 -0400
 
